Completed UnitTests for OrderServiceImpl 100% coverage